# react-native-rust-demo

./: .gitignore  App.js  README.md  cargo-config.toml.template  create-ndk-standalone.sh  index.android.js  index.js  package-lock.json  package.json
android/app/src/main/: .gitignore
android/app/src/main/java/com/demo/: MainApplication.java  MobileAppBridge.java  MobileAppPackage.java  NSDHelper.java
ios/Demo/: Info.plist
ios/Demo.xcodeproj/: project.pbxproj
rust/: .gitignore  Cargo.toml  Makefile
rust/demo/: Cargo.toml  copy_android.sh  makefile
rust/demo/src/: lib.rs
rust/mobile_app/: Cargo.toml
rust/mobile_app/src/: android.rs  lib.rs  mdns.rs
